
CMSynergy:
----------------------
* Added options reconfigure, ignoreWorkarea, language, and country attributes (CC-179). Patch by Robert J. Smith
* Major overhaul of CMSynergy support (CC-217). Patch by Robert J. Smith
    - added CMSynergySessionMonitor listener
    - added CMSynergyBaselinePublisher
    - added CMSynergyTaskPublisher
    - added instance attribute to CMSynergy source control

cruisecontrol.sh:
----------------------
* Execute java from JAVA_HOME. Patch by Martin Jaeger.

CruiseControlController:
----------------------
* Reloads the config file if it has changed (CC-74). Contributions by Jerome Lacoste, Tangi Vass, and Jeffrey Fredrick

CurrentBuildStatusBootstrapper/Publisher:
----------------------
* Add javadoc deprecated flag and a warning when they are created to indicate they have been made obsolete by CurrentBuildStatusListener. Patch by Jerome Lacoste.

CurrentBuildStatusFTPListener:
----------------------
* Added ftp version of CurrentBuildStatusListener. Contributed by Jerome Lacoste

CVS:
----------------------
* Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
* Updated documentation and class comments to correctly reflect the required attributes after the module change (CC-207). Patch by Mark Doliner
* No longer using environment variable CVS_ROOT. Validation now requires one to either set localworkingcopy or cvsroot and module (CC-207). Patch by Mark Doliner
* Fixed getting cvs version number to avoid the NPE, and automatically use the old format in that case (CC-105). Patch by Jerome Lacoste.

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------